--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "id",
+  "name": "reactjs-id-card-application",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "ajv": "6.0.0",
+    "body-parser": "1.18.3",
+    "connect-flash": "0.1.1",
+    "cookie-parser": "1.4.3",
+    "cors": "2.8.4",
+    "express": "4.16.3",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
