--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "private": true,
   "dependencies": {
     "ajv": "6.0.0",
+    "axios": "0.18.0",
     "body-parser": "1.18.3",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
     "express": "4.16.3",
+    "mongoose": "^5.2.9",
+    "node": "^10.8.0",
+    "path": "^0.12.7",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-router-dom": "4.3.1",
@@ -19,5 +23,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0"
   }
 }
