--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "1.4.3",
     "cors": "2.8.4",
     "express": "4.16.3",
+    "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "node": "^10.8.0",
     "path": "^0.12.7",
