--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "body-parser": "1.18.3",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
-    "cors": "2.8.4",
+    "cors": "^2.8.4",
     "express": "4.16.3",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
@@ -23,9 +23,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon src/server/server.js"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0"
+    "babel-cli": "^6.26.0",
+    "nodemon": "^1.18.3"
   }
 }
