--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "6.0.0",
-    "axios": "0.18.0",
+    "axios": "^0.18.0",
     "body-parser": "1.18.3",
     "connect-flash": "0.1.1",
     "cookie-parser": "1.4.3",
