--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.2.9",
     "node": "^10.8.0",
     "path": "^0.12.7",
+    "pdfkit": "^0.8.3",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-router-dom": "4.3.1",
