--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "server": "nodemon src/server/server.js",
-    
+    "server": "nodemon src/server/server.js"
+
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
