--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "cookie-parser": "1.4.3",
     "cors": "^2.8.4",
     "express": "4.16.3",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.3",
     "mongoose": "^5.2.9",
     "node": "^10.8.0",
     "path": "^0.12.7",
     "pdfkit": "^0.8.3",
     "react": "16.4.2",
+    "react-datepicker": "^1.7.0",
     "react-dom": "16.4.2",
     "react-router-dom": "4.3.1",
     "react-scripts": "1.1.4"
@@ -27,7 +29,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "server": "nodemon src/server/server.js"
-
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
